<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
   <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button android:id="@+id/button_closewifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/closewifi"
            android:visibility="gone"
        />
        <Button android:id="@+id/button_changechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changchat"
            android:visibility="gone"
        />          
   </LinearLayout> 
   <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >       
        <Button android:id="@+id/button_scanwifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanwifi"
            android:visibility="gone"
        />
        <Button android:id="@+id/button_getwifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getwifi"
            android:visibility="gone"
        /> 
        <Button android:id="@+id/button_closebluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/closebluetooth"
        /> 
	</LinearLayout> 
	                             
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
       <Button android:id="@+id/button_openwifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/openwifi"
            android:visibility="gone"
        />    
       <Button android:id="@+id/button_getwifi_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getwifi_state"
        /> 

	</LinearLayout> 
    <LinearLayout
        android:id="@+id/wifi_state_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >  
     
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/wifi_state_prompt"
        />
        <TextView android:id="@+id/current_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/current_state"
            android:ellipsize="marquee"
        />
        </LinearLayout>

    <ListView android:id="@+id/in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        android:layout_weight="1"
    />
    
    <ListView android:id="@+id/wifilist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        android:layout_weight="1"
        android:visibility="gone"
    />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/edit_text_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
        />
        <Button android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
        />
    </LinearLayout>
</LinearLayout>
