<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    >

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dip"
        >
    
     <TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="22dip"
       android:paddingLeft="10dip"
       android:text="@string/pet_set_nickname"
       android:layout_gravity="center_horizontal|center_vertical"
       />
    <EditText android:id="@+id/pet_nickname"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="22dip"
       android:layout_marginLeft="10dip"
       android:layout_gravity="center_horizontal|center_vertical"
       android:hint="xiao Q"
       android:singleLine="true"
       android:maxLength="20"
       android:ems="20"
       />
    </LinearLayout>
<!-- android:textColor="@color/preference_text_color" -->
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="60dip"
        android:layout_marginTop="10dip"
        android:orientation="horizontal"
        >
	    <TextView 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:textSize="22dip"
	       android:paddingLeft="10dip"
	       android:text="@string/pet_set_portrait"
	       android:layout_gravity="center_horizontal|center_vertical"
	       />
	    <TextView android:id="@+id/pet_portrait_id"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:visibility="gone"
	       />
	    <ImageView android:id="@+id/pet_portrait_image"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:paddingLeft="15dip"
	       android:layout_marginLeft="10dip"
	       android:layout_gravity="center_horizontal|center_vertical"
	       android:src="@drawable/ic_launcher"
	       android:adjustViewBounds="true"
	       android:scaleType="centerInside"
	       />  

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        style="@android:style/ButtonBar">

        <Button android:id="@+id/pet_save"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pet_save"/>

        <Button android:id="@+id/pet_cancel"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pet_cancel"/>

    </LinearLayout>

</LinearLayout>
