<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clock_background"
    android:orientation="vertical"> 

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <LinearLayout android:id="@+id/add_reminder"
        android:clickable="true"
        android:focusable="true"
        android:background="@android:drawable/list_selector_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <ImageView
            style="@style/alarm_list_left_column"
            android:duplicateParentState="true"
            android:gravity="center"
            android:scaleType="center"
            android:src="@drawable/add_alarm" />

        <TextView
            android:duplicateParentState="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/add_reminder" />
        </LinearLayout>
        
    <LinearLayout android:id="@+id/refresh_reminder"
        android:clickable="true"
        android:focusable="true"
        android:background="@android:drawable/list_selector_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:orientation="horizontal">
        <ImageView
            style="@style/alarm_list_left_column"
            android:duplicateParentState="true"
            android:gravity="center"
            android:scaleType="center"
            android:src="@drawable/refresh_alarm" />
        <TextView
            android:duplicateParentState="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/refresh_reminder" />
    </LinearLayout>

    <LinearLayout android:id="@+id/upload_reminder"
        android:clickable="true"
        android:focusable="true"
        android:background="@android:drawable/list_selector_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:orientation="horizontal">
        <ImageView
            style="@style/alarm_list_left_column"
            android:duplicateParentState="true"
            android:gravity="center"
            android:scaleType="center"
            android:src="@drawable/refresh_alarm" />
        <TextView
            android:duplicateParentState="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/upload_reminder" />
    </LinearLayout>
    
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:gravity="fill_horizontal"
        android:src="@android:drawable/divider_horizontal_dark" />

    <ListView
        android:id="@+id/reminders_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>
